[wayland] Bookmark toolbar folders located on the left side of the window have a misaligned drop location during drag operations
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
|
346.36 KB,
video/webm
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
STR:
- Start with
MOZ_ENABLE_WAYLAND=1on Ubuntu 22.04. - Create a bookmark toolbar folder with a long list of items.
- Position the folder on the left-most side of the toolbar.
- Open the folder and drag bookmarks around, dropping them over the lower-right region of the popup.
Bug 1791539 fixed the drop indicator position but the actual drop location is still offset.
| Assignee | ||
Comment 2•3 years ago
|
||
Updated•3 years ago
|
Comment 4•3 years ago
|
||
| bugherder | ||
Comment 5•3 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox107towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•3 years ago
|
||
Comment on attachment 9299181 [details]
Bug 1794597 [Wayland] Apply popup drop position workaround to both drag motion and drag drop operations r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Wrong drop position when bookmarks are dropped.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch sync D&D handlers - we have correct fix in move handler only and we add it to drop handler too.
- String changes made/needed:
- Is Android affected?: No
Comment 7•3 years ago
|
||
Comment on attachment 9299181 [details]
Bug 1794597 [Wayland] Apply popup drop position workaround to both drag motion and drag drop operations r?emilio
Approved for 107.0b3.
Comment 8•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
•
|
||
Reproduced this issue on an affected Nightly build from 2022-010-11, on Ubuntu 22.04 with Wayland enabled.
Verified as fixed on Firefox 107.0b3 (20221020202724) and 108.0a1 (20221021083918).
Updated•3 years ago
|
Description
•