Bug 1794597 [Wayland] Apply popup drop position workaround to both drag motion and drag drop operations r=emilio, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D159674